added footer links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,24 +4,9 @@
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
-      <div class="footer-col one-half">
-      <h2 class="footer-heading">{{ site.title | escape }}</h2>
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- endif -%}
-            </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
-        </ul>
-      </div>
-
-      <div class="footer-col one-half">
-        <p>{{- site.description | escape -}}</p>
-      </div>
-
+      {% locale_link :ref => 'imprint' %}{{ site.data.includes.footer[page.locale].imprint }}{% endlocale_link %}
+      {% locale_link :ref => 'privacy' %}{{ site.data.includes.footer[page.locale].privacy }}{% endlocale_link %}
+      {% locale_link :ref => 'partners' %}{{ site.data.includes.footer[page.locale].partners }}{% endlocale_link %}
     </div>
 
   </div>
