generate pages for methods

--- a/_includes/pages/blog.html
+++ b/_includes/pages/blog.html
@@ -1,6 +1,6 @@
 <h2>{{ site.data.pages.blog[page.locale].title }}</h2>
 
-{% assign blog_pages = site.pages | where: "is_blog_post", true %}
+{% assign blog_pages = site.pages | where: "kind", "blogPost" %}
 {% assign locale_blog_pages = blog_pages | where: "locale", page.locale %}
 
 <ul>
