refactored locale link tag

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,9 @@
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
-      {% locale_link :ref => 'imprint' %}{{ site.data.includes.footer[page.locale].imprint }}{% endlocale_link %}
-      {% locale_link :ref => 'privacy' %}{{ site.data.includes.footer[page.locale].privacy }}{% endlocale_link %}
-      {% locale_link :ref => 'partners' %}{{ site.data.includes.footer[page.locale].partners }}{% endlocale_link %}
+      {% locale_link imprint %}{{ site.data.includes.footer[page.locale].imprint }}{% endlocale_link %}
+      {% locale_link privacy %}{{ site.data.includes.footer[page.locale].privacy }}{% endlocale_link %}
+      {% locale_link partners %}{{ site.data.includes.footer[page.locale].partners }}{% endlocale_link %}
     </div>
 
   </div>
