--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
 
-    {% locale_link :ref => 'home', :class => 'site-title', :rel => 'author' %}
+    {% locale_link home %}
       {{ site.title | escape }}
     {% endlocale_link %}
 
@@ -20,11 +20,11 @@
       </label>
 
       <div class="trigger">
-        {% locale_link :ref => 'about' %}{{ site.data.includes.header[page.locale].about }}{% endlocale_link %}
-        {% locale_link :ref => 'approach' %}{{ site.data.includes.header[page.locale].approach }}{% endlocale_link %}
-        {% locale_link :ref => 'services' %}{{ site.data.includes.header[page.locale].services }}{% endlocale_link %}
-        {% locale_link :ref => 'blog' %}{{ site.data.includes.header[page.locale].blog }}{% endlocale_link %}
-        {% locale_link :ref => 'jobs' %}{{ site.data.includes.header[page.locale].jobs }}{% endlocale_link %}
+        {% locale_link about %}{{ site.data.includes.header[page.locale].about }}{% endlocale_link %}
+        {% locale_link approach %}{{ site.data.includes.header[page.locale].approach }}{% endlocale_link %}
+        {% locale_link services %}{{ site.data.includes.header[page.locale].services }}{% endlocale_link %}
+        {% locale_link blog %}{{ site.data.includes.header[page.locale].blog }}{% endlocale_link %}
+        {% locale_link jobs %}{{ site.data.includes.header[page.locale].jobs }}{% endlocale_link %}
         {% language_switcher %}
       </div>
     </nav>
