setup basic assets & fonts, add scroll/animation prototype

--- a/_includes/pages/approach.html
+++ b/_includes/pages/approach.html
@@ -1,3 +1,3 @@
 <h2>{{ site.data.pages.approach[page.locale].title }}</h2>
 
-{% image_tag src="/assets/approach.png" width="500" %}
+{% image_tag src="/assets/images/logo_d-labs.svg" width="500" %}
