--- a/_includes/pages/home.html
+++ b/_includes/pages/home.html
@@ -1,9 +1,9 @@
 <h2>{{ site.data.pages.home[page.locale].title }}</h2>
-<div style="position: relative;">
+<div class="relative">
   <div class="overlay">
     <div class="home-logo-container">
       <div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 600">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 600" class="maxwidth-6 width-full">
           <circle
             id="_06-ellipse-red"
             cx="300"
@@ -210,9 +210,9 @@
   <div class="b1" data-visible-key="screen1">
     <div
       class="t1"
-      data-init-class="hidden"
-      data-class-on-enter="screen1:-hidden"
-      data-class-on-leave="screen1:+hidden"
+      data-init-class="almost-hidden"
+      data-class-on-enter="screen1:-almost-hidden"
+      data-class-on-leave="screen1:+almost-hidden"
     >
       Hi
     </div>
@@ -220,9 +220,9 @@
   <div class="b2" data-visible-key="screen2">
     <div
       class="t1"
-      data-init-class="hidden"
-      data-class-on-enter="screen2:-hidden"
-      data-class-on-leave="screen2:+hidden"
+      data-init-class="almost-hidden"
+      data-class-on-enter="screen2:-almost-hidden"
+      data-class-on-leave="screen2:+almost-hidden"
     >
       There
     </div>
@@ -230,9 +230,9 @@
   <div class="b1" data-visible-key="screen3">
     <div
       class="t1"
-      data-init-class="hidden"
-      data-class-on-enter="screen3:-hidden"
-      data-class-on-leave="screen3:+hidden"
+      data-init-class="almost-hidden"
+      data-class-on-enter="screen3:-almost-hidden"
+      data-class-on-leave="screen3:+almost-hidden"
     >
       This is test
     </div>
@@ -240,9 +240,9 @@
   <div class="b2" data-visible-key="screen4">
     <div
       class="t1"
-      data-init-class="hidden"
-      data-class-on-enter="screen4:-hidden"
-      data-class-on-leave="screen4:+hidden"
+      data-init-class="almost-hidden"
+      data-class-on-enter="screen4:-almost-hidden"
+      data-class-on-leave="screen4:+almost-hidden"
     >
       Test again
     </div>
