--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
   {%- include head.html -%}
-
-  <body>
-
+  <body class="col {{layout.body_class}}">
     {%- include header.html -%}
-
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+    <main class="fill-parent" aria-label="Content">
+      {{ content }}
     </main>
-
     {%- include footer.html -%}
-
   </body>
-
 </html>
