--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "fonts";
 @import "normalize";
 @import "atoms";
-@import "buttons";
+@import "components";
 @import "base";
 @import "header";
 
