--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
         </a>
       </div>
       <div class="push"></div>
-      <div class="row sp-6">
+      <div class="row sp-6 q-md-sp-3">
         {% for name in site.data.includes.footer.pages %}
           {% locale_link {{ name }} class:"link text-xs" %}
             {{site.data.includes.footer[page.locale][name]}}
