--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -12,6 +12,12 @@
   background-color: transparent;
   user-select: none;
   cursor: pointer;
+  font-weight: bold;
+  font-family: LetterGothic;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-size: $font-size-xs;
+  line-height: 1;
 }
 
 .button-text {
@@ -32,6 +38,17 @@
 
 .button {
   @extend %raw-button;
+  padding: 0.75rem 1rem 0.55rem;
+
+  color: $white;
+  background-color: $blue;
+  &:hover {
+    background-color: $darkBlue;
+  }
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.2rem $blue-a25;
+  }
 }
 
 .link {
@@ -89,7 +106,7 @@
     padding-left: 2rem;
   }
 
-  a {
+  a:not(.button) {
     transition-property: color;
     color: $blue;
     &:hover {
