--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -47,8 +47,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-button img {
+img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 h1,
