--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="main-header bg-white col align-center px-4 py-4 sticky">
+<header class="main-header bg-white col align-center px-4 py-4 fixed width-full">
   <div class="maxwidth-7 width-full row sp-3 align-center">
     {% locale_link home %}
       <img src="/assets/images/logo_d-labs.svg" alt="{{ site.title | escape }}" class="height-3 header-logo" />
