--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -7,6 +7,7 @@ html {
   background-repeat: no-repeat;
   font-size: 1em;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 /*
@@ -45,6 +46,7 @@ body {
   scroll-snap-type: y mandatory;
   margin: 0;
   font-family: "Roboto", sans-serif;
+  line-height: 1.5;
 }
 
 img {
